Ajout des vaisseaux ennemies ainsi que du tireur

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h3 {
     background-size: contain;
 }
 .aliens {
-    background: url(images/vaisseau.png);
+    background: url(images/ennemies.png);
     background-position: center;
     background-size: contain;
 }
